--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
 <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
   
 <script src="%PUBLIC_URL%/js/modernizr.js"></script>
+<script src="https://smtpjs.com/v3/smtp.js"></script>
+
 <title>Sample resume</title>
   </head>
   <body>
@@ -52,6 +54,6 @@
     <script src="js/jquery.fittext.js"></script>
     <script src="js/magnific-popup.js"></script>
     <script src="js/init.js"></script>
-
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
   </body>
 </html>
